# Research-Multi-Agent-System

./: config.py  main.py  pyproject.toml
agents/: critic.py  planner.py  retriever.py
graph/: builder.py  edges.py  nodes.py  state.py
memory/: episodic.db  store.py
memory/chroma_db/: chroma.sqlite3
prompts/: __init__.py  critic_v1.yaml  planner_v1.yaml  retriever_v1.yaml  synthesizer_v1.yaml
schemas/: __init__.py
tools/: arxiv_tool.py
